Salesforce_integration/objects/Cardtapp_App_Share__c.object
<CustomObject>
    <fields>
        <fullName>Member_Email__c</fullName>
        <label>Member Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Member_Vertical_Code__c</fullName>
        <defaultValue>&apos;ct&apos;</defaultValue>
        <label>Member Vertical Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cardtapp App Shares</relationshipLabel>
        <relationshipName>Cardtapp_App_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cardtapp App Shares</relationshipLabel>
        <relationshipName>Cardtapp_App_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cardtapp_App_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tapper_Email__c</fullName>
        <label>Tapper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tapper_First_Name__c</fullName>
        <label>Tapper First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_Last_Name__c</fullName>
        <label>Tapper Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_Mobile_Phone__c</fullName>
        <label>Tapper Mobile Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Cardtapp App Share</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAS-{00000}</displayFormat>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cardtapp App Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>